Updated check your answers page with send report info

--- a/app/views/project/report/check-your-answers.html
+++ b/app/views/project/report/check-your-answers.html
@@ -27,12 +27,18 @@
 		<p class="govuk-body-l">Check answers shown here don't include lines, only as illustration</p>
 		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+		<p class="govuk-body">You can now send your report to be reviewed and signed off by:</p>		
 
+		<ul class="govuk-list govuk-list--bullet">
+			<li>Kate Harries - Section 151 Officer</li>
+			<li>Brian Coult - Chief Finance Officer</li></ul>
+
+		<p class="govuk-body">You'll receive an email when your report has been signed off.</p>	
 
 		
         <div class="govuk-button-group">
         	{{ govukButton({
-            	text: "Continue",
+            	text: "Send report",
 				href: "/project/report/submit-report"
           	}) }}            
 
