--- a/app/views/project/report/submit-report.html
+++ b/app/views/project/report/submit-report.html
@@ -17,18 +17,13 @@
 
             </ul>
 
-			<p class="govuk-body">You can now submit your report to be reviewed and signed off by:</p>		
+			<p class="govuk-body">You can now send your report to be reviewed and signed off by:</p>		
 
 			<ul class="govuk-list govuk-list--bullet">
                 <li>Kate Harries - Section 151 Officer</li>
                 <li>Brian Coult - Chief Finance Officer</li></ul>
 
-			<p class="govuk-body">If your report is signed off, you'll receive an email to let you know.</p>	
-
-			<p class="govuk-body">If your report is declined for any reason, you'll receive an email letting you know why. You can then address any problems resend the report.</p>	
-
-
-			<p class="govuk-body"></p>	
+			<p class="govuk-body">You'll receive an email when your report has been signed off.</p>	
 
 
         	{{ govukButton({
