logic tidy up and listings

--- a/app/views/emails/report-declined-confirmation.html
+++ b/app/views/emails/report-declined-confirmation.html
@@ -30,7 +30,7 @@
 
 
 
-    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-declined">Report declined email to reporter</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-declined">Go to email sent to reporter</a></p>
   
     <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
 
