--- a/app/views/emails/report-signed-off-confirmation.html
+++ b/app/views/emails/report-signed-off-confirmation.html
@@ -30,7 +30,7 @@
 
 
 
-    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-signed-off-confirmation-reporter">Report signed off email to reporter</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-signed-off-confirmation-reporter">Go to email to reporter for report signed off</a></p>
   
     <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
 
