--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -31,7 +31,7 @@
 
 
   
-    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Go to email sent to Section 151 officer</a></p>
 
 
 
