--- a/app/views/emails/section151.html
+++ b/app/views/emails/section151.html
@@ -31,7 +31,7 @@
 
 
   
-    <p><a href="/sign-in?userType=Section151">MAGIC LINK</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/sign-in?userType=Section151">Link back to service</a></p>
 
 
 
