--- a/app/views/project/sign-off/index.html
+++ b/app/views/project/sign-off/index.html
@@ -9,49 +9,43 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+	<div class="govuk-grid-column-two-thirds">
 
-      {{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+    	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
-      <p>Content about what they are doing.</p>
+      	<p class="govuk-body">Content about what they are doing.</p>
       
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-      <p class="govuk-body-l">Option to view or download report, dont include lines, only as illustration. (TBC)</p>
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  
-  
+      	<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+      	<p class="govuk-body-l">Option to view or download report, dont include lines, only as illustration. (TBC)</p>
+      	<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 		
-      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
-        <li></li>
-        <li></li>
-      
-      </ul>
+      	<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        	<li></li>
+      	</ul>
 
-      
+		<div class="govuk-button-group">
+          
+        	<form method="post" action="/project/sign-off/confirmation" >	  
+          		
+				<input type="hidden" name="reportStatus" id="reportStatus" value="Signed" />
+				{{ govukButton({
+            		text: "Sign off this report"
+          		}) }}
 
-      <form method="post" action="/project/sign-off/confirmation?status=" >	  
-  
-        <div class="govuk-button-group">
-          {{ govukButton({
-            text: "Sign off this report"
-          }) }}
+        	</form>
 
-          {{ govukButton({
-            text: "Decline sign off",
-            classes: "govuk-button--secondary",
-            href: "/project/sign-off/reason-for-decline"
-          }) }}
-  
+        	<form method="post" action="/project/sign-off/reason-for-decline" >
+
+          		<input type="hidden" name="reportStatus" id="reportStatus" value="Declined" />
+				{{ govukButton({
+            		text: "Decline sign off",
+            		classes: "govuk-button--secondary"            		
+          		}) }}
+  			</form>
           
         </div>
 
-        </form>
-
-
-
-
-  </div>
-  
+	</div>  
 </div>
 
 {% endblock %}
