--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -77,9 +77,9 @@
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Project locations</h3>
                     <ul class="govuk-list govuk-list--bullet">
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Projects</a></li>
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Add postcode</a></li>
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Change postcode</a></li>                
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/locations/" >Projects</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/locations/add-postcode" >Add postcode</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/locations/change-postcode" >Change postcode</a></li>                
                     </ul>
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Project RAG ratings</h3>
