--- a/app/views/project/report/confirmation.html
+++ b/app/views/project/report/confirmation.html
@@ -18,7 +18,9 @@
 	
 		<p class="govuk-body">We have sent you a confirmation email.</p>			
 		<h2 class="govuk-heading-m">What happens next</h2>	
-		<p class="govuk-body">We will email the section 151 officer .....</p>		  		
+		<p class="govuk-body">The people responsible for signing off your report have 7 working days to review it. </p>
+			
+		<p class="govuk-body">Following the review, they can either submit the report if there are no problems or decline it if they have any concerns or need you to correct something. You'll recieve an email letting you know either way.</p>		  		
 		<p><a href="/project/" class="govuk-link govuk-link--no-visited-state">Return to your project overview</a></p>
 
 		<!-- <p class="govuk-body"><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p> -->
