--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -25,7 +25,7 @@
 
     <p>Once reviewed, your report will either be submitted or declined - you'll be sent an email to let you know.</p>
 
-    <p>If your report is declined, the email will contain information about why the report was declined and you will be able to correct any issues and resend the report for another review.</p>
+    <p>If your report is declined, the email will explain why and you will be able to correct any issues and resend the report for another review.</p>
 
     <h2 class="govuk-heading-m">Get help</h2>	
 
