--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -23,7 +23,7 @@
 
     <h2 class="govuk-heading-m">What happens next</h2>	
 
-    <p>Once reviewed, your report will either be submitted or declined - you'll be sent an email to let you know.</p>
+    <p>Once reviewed, your report will either be submitted or declined - you'll be sent an email by 14 July 2024 to let you know the outcome.</p>
 
     <p>If your report is declined, the email will explain why and you will be able to correct any issues and resend the report for another review.</p>
 
