--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -19,11 +19,11 @@
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
     
-    <p>Your report for ((fund name)) has been sent to ((user_name_and_role)) and ((user_name_and_role)) for review.</p>
+    <p>Your report for ((fund_name)) has been sent to ((user_name_and_role)) and ((user_name_and_role)) for review.</p>
 
     <h2 class="govuk-heading-m">What happens next</h2>	
 
-    <p>Once reviewed, your report will either be submitted or declined - you'll be sent an email by 14 July 2024 to let you know the outcome.</p>
+    <p>Once reviewed, your report will either be submitted or declined. You'll be sent an email by 14 July 2024 to let you know the outcome.</p>
 
     <p>If your report is declined, the email will explain why and you will be able to correct any issues and resend the report for another review.</p>
 
