Added content to report declined for S151 email

--- a/app/views/emails/report-signed-off-confirmation.html
+++ b/app/views/emails/report-signed-off-confirmation.html
@@ -20,6 +20,8 @@
     <h1 class="govuk-heading-l">{{ title }}</h1>        
     
     <p>You successfully signed off and submitted a report from ((organisation_name)) to ((fund_name)).</p>
+
+    <p>Reporting period<br><strong>July 2023 to September 2023</strong></p>
   
     <p><a href="#">Sign in to view or download the submitted report</a></p>
     
