--- a/app/views/project/sign-off/index.html
+++ b/app/views/project/sign-off/index.html
@@ -35,7 +35,7 @@
           		
 				<input type="hidden" name="reportStatus" id="reportStatus" value="Signed" />
 				{{ govukButton({
-            		text: "Sign off this report"
+            		text: "Sign off and submit report"
           		}) }}
 
         	</form>
