--- a/app/views/project/sign-off/confirmation.html
+++ b/app/views/project/sign-off/confirmation.html
@@ -25,7 +25,7 @@
 
 			<p class="govuk-body">We have sent you a confirmation email.</p>			
 			<h2 class="govuk-heading-m">What happens next</h2>	
-			<p class="govuk-body">We've emailed ((user_name)) to let them know the report has been declined and included the reason you gave in the email.</p>	
+			<p class="govuk-body">We've emailed ((user_name)) to let them know the report has been declined and included the reason you gave.</p>	
 			<p class="govuk-body">They will be able to correct the report and resend it to you for review.</p>		  
 			<p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-declined-confirmation">Go to email sent to Section 151 officer</a></p>
 
